--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.remainder.MainActivity">
+    tools:context="com.remainder.Main"
+    android:background="@color/color_background">
 
     <ListView android:id="@+id/listview_result"
         android:layout_width="fill_parent"
