--- a/app/src/main/res/layout/activity_reminder_list.xml
+++ b/app/src/main/res/layout/activity_reminder_list.xml
@@ -1,15 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:background="@color/color_background">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+    <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -34,6 +34,7 @@
             </TextView>
 
         </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -65,6 +66,7 @@
 
                 </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -153,7 +155,5 @@
 
     </LinearLayout>
     </LinearLayout>
-
-
 
 </LinearLayout>
