--- a/app/src/main/res/layout/activity_reminder_list.xml
+++ b/app/src/main/res/layout/activity_reminder_list.xml
@@ -2,8 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@color/color_background">
-
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,19 +16,18 @@
             android:layout_marginBottom="@dimen/dim_5dp"
             android:paddingTop="@dimen/dim_10dp">
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name : "
-                android:textColor="#000"
-                android:textSize="@dimen/abc_text_size_menu_material"/>
+                android:textColor="@color/labeltext"
+                android:textSize="@dimen/textsize_16sp"/>
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/abc_text_size_menu_material"
+                android:textSize="@dimen/textsize_16sp"
                 android:textColor="#000">
             </TextView>
 
