--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/dim_10dp"
+    android:paddingRight="@dimen/dim_10dp"
     android:paddingBottom="@dimen/dim_10dp"
     tools:context="com.remainder.Main"
     android:background="@color/background">
 
     <ListView android:id="@+id/listview_result"
         android:layout_width="fill_parent"
-        android:padding="5dp"
+        android:padding="@dimen/dim_5dp"
         android:scrollbars="none"
         android:layout_height="wrap_content">
     </ListView>
