--- a/app/src/main/res/layout/activity_reminder_list.xml
+++ b/app/src/main/res/layout/activity_reminder_list.xml
@@ -127,6 +127,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -134,7 +135,6 @@
         android:orientation="horizontal"
         android:layout_marginBottom="@dimen/dim_5dp"
         android:paddingTop="@dimen/dim_10dp">
-
 
         <TextView
             android:layout_width="wrap_content"
@@ -150,6 +150,13 @@
             android:textSize="@dimen/abc_text_size_menu_material"
             android:textColor="#000">
         </TextView>
+
+        <!--<Button-->
+           <!--android:id="@+id/button_reminderlist_details"-->
+           <!--android:layout_width="wrap_content"-->
+           <!--android:layout_height="wrap_content"-->
+            <!--android:gravity="right"-->
+           <!--android:text="Show details" />-->
 
     </LinearLayout>
     </LinearLayout>
