--- a/app/src/main/res/layout/activity_reminder_list.xml
+++ b/app/src/main/res/layout/activity_reminder_list.xml
@@ -24,7 +24,7 @@
                 android:textSize="@dimen/textsize_16sp"/>
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/textview_reminderlist_name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textsize_16sp"
@@ -55,7 +55,7 @@
                         android:textSize="@dimen/abc_text_size_menu_material"/>
 
                     <TextView
-                        android:id="@+id/details"
+                        android:id="@+id/textview_reminderlist_details"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/abc_text_size_menu_material"
@@ -85,7 +85,7 @@
                         android:textSize="@dimen/abc_text_size_menu_material"/>
 
                     <TextView
-                        android:id="@+id/date"
+                        android:id="@+id/textview_reminderlist_date"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/abc_text_size_menu_material"
@@ -114,7 +114,7 @@
             android:textSize="@dimen/abc_text_size_menu_material"/>
 
         <TextView
-            android:id="@+id/email"
+            android:id="@+id/textview_reminderlist_email"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/abc_text_size_menu_material"
@@ -141,22 +141,26 @@
             android:layout_height="wrap_content"
             android:text="Phone : "
             android:textColor="#000"
-            android:textSize="@dimen/abc_text_size_menu_material"/>
+           android:textSize="@dimen/abc_text_size_menu_material"/>
 
         <TextView
-            android:id="@+id/phone"
-            android:layout_width="fill_parent"
+            android:id="@+id/textview_reminderlist_phone"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/abc_text_size_menu_material"
+            android:gravity="left"
             android:textColor="#000">
         </TextView>
 
-        <!--<Button-->
-           <!--android:id="@+id/button_reminderlist_details"-->
-           <!--android:layout_width="wrap_content"-->
-           <!--android:layout_height="wrap_content"-->
-            <!--android:gravity="right"-->
-           <!--android:text="Show details" />-->
+        <Button
+           android:id="@+id/button_reminderlist_details"
+           android:layout_width="@dimen/dim_30dp"
+           android:layout_height="@dimen/dim_40dp"
+           android:layout_gravity="right"
+           android:layout_marginLeft="@dimen/dim_100dp"
+           android:background="@android:color/transparent"
+           android:drawableTop="@drawable/rb_showdetails"
+            />
 
     </LinearLayout>
     </LinearLayout>
