--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,4 +37,5 @@
     <color name="buttontext">#a8dff4</color>
     <color name="buttonbackground">#0099cc</color>
     <color name="white">#FFFFFF</color>
+    <color name="trans">#00000000 </color>
 </resources>
